chore: fix namespacing in config to use "ewc"

--- a/src/components/media-controls/media-controls.css
+++ b/src/components/media-controls/media-controls.css
@@ -8,6 +8,7 @@
   border-radius: 0;
   border-width: 1px;
   flex: 1;
+  color: var(--ewc-primary-text-color);
 }
 
 :host > div :first-child {
